# eigent

./: .env.development  docker-compose.backend.yml
backend/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/app/: __init__.py  router.py
backend/app/agent/: README.md  __init__.py  agent_model.py  listen_chat_agent.py  prompt.py  tools.py  utils.py
backend/app/agent/factory/: __init__.py  browser.py  developer.py  document.py  mcp.py  multi_modal.py  social_media.py
backend/app/agent/toolkit/: __init__.py  audio_analysis_toolkit.py  code_execution_toolkit.py  craw4ai_toolkit.py  excel_toolkit.py  file_write_toolkit.py  github_toolkit.py  google_calendar_toolkit.py  google_drive_mcp_toolkit.py  google_gmail_mcp_toolkit.py  human_toolkit.py  hybrid_browser_python_toolkit.py  hybrid_browser_toolkit.py  image_analysis_toolkit.py  lark_toolkit.py  linkedin_toolkit.py  markitdown_toolkit.py  mcp_search_toolkit.py  note_taking_toolkit.py  notion_mcp_toolkit.py  notion_toolkit.py  pptx_toolkit.py  (+15 more)
backend/app/component/: command.py  environment.py
backend/app/controller/: chat_controller.py  electron_browser.cjs  health_controller.py  model_controller.py  task_controller.py  tool_controller.py
backend/app/middleware/: ephemeral_gateway.py
backend/app/model/: chat.py
backend/app/service/: chat_service.py  task.py
backend/app/utils/: agent.py  anyio_cancel_patch.py  event_loop_utils.py  extra_params_config.py  file_utils.py  oauth_state_manager.py  single_agent_worker.py  workforce.py
backend/scripts/: chat_api_cli.py
backend/tests/: conftest.py
(+38 files in other folders)
